# Triangulum-III

./: .gitignore  .gitmodules  README.md  api.md
client/: index.html  package.json  webpack.config.js  webpack.production.config.js
client/src/: connection.js  entity.js  handy.js  main.js  player.js  utils.js
client/src/states/: Boot.js  Game.js  MainMenu.js  Splash.js
server/: .clang-format  CMakeLists.txt  build_dbg.sh
server/src/: Game.cpp  Game.h  Main.cpp  main.c  main.cpp
server/src/triangulum/: EntityFactory.cpp  EntityFactory.h  Game.cpp  Game.h  SystemEvents.h
server/src/triangulum/component/: Bullet.cpp  Bullet.h  ClientInfo.cpp  ClientInfo.h  Damage.cpp  Damage.h  DynamicBody.cpp  DynamicBody.h  Graphics.cpp  Graphics.h  Health.cpp  Health.h  Input.cpp  Input.h  PlayerInfo.cpp  PlayerInfo.h  Posture.cpp  Posture.h  Score.cpp  Score.h  Velocity.cpp  Velocity.h  Visible.cpp  Visible.h  Weapon.cpp  Weapon.h
server/src/triangulum/message/: Message.h  MessageManager.cpp  MessageManager.h  MessageMap.cpp  MessageMap.h
server/src/triangulum/network/: Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  IConnection.h  IConnectionManager.h  Server.cpp  Server.h
server/src/triangulum/system/: ConnectionSystem.cpp  ConnectionSystem.h  ControlSystem.cpp  ControlSystem.h  ForceSystem.cpp  ForceSystem.h  InputSystem.cpp  InputSystem.h  OutputSystem.cpp  OutputSystem.h  ScoreSystem.cpp  ScoreSystem.h  SimulationSystem.cpp  SimulationSystem.h  WeaponSystem.cpp  WeaponSystem.h  WorldSystem.cpp  WorldSystem.h
server/src/triangulum/web/: WebServer.cpp  WebServer.h
